removed junk files from git

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ FRDLivelyButtonDemo/FRDLivelyButtonDemo.xcodeproj/project.xcworkspace/xcuserdata
 FRDLivelyButtonDemo/FRDLivelyButtonDemo.xcodeproj/project.xcworkspace/xcuserdata/sebastienwindal.xcuserdatad/UserInterfaceState.xcuserstate
 
 *.xcuserstate
+
+FRDLivelyButtonDemo/FRDLivelyButtonDemo.xcodeproj/xcuserdata/sebastienwindal.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+FRDLivelyButtonDemo/FRDLivelyButtonDemo.xcodeproj/project.xcworkspace/xcuserdata/sebastienwindal.xcuserdatad/UserInterfaceState.xcuserstate
+
+FRDLivelyButtonDemo/FRDLivelyButtonDemo.xcodeproj/project.xcworkspace/xcuserdata/sebastienwindal.xcuserdatad/UserInterfaceState.xcuserstate
